# abc

./: CMakeLists.txt
Engine/bias/: LLSBiasCorrector.txx
Engine/brainseg/: EMSParameters.cxx  EMSegmentationFilter.h  EMSegmentationFilter.txx  runEMS.cxx
Engine/common/: MersenneTwisterRNG.cxx
Engine/register/: AtlasRegistrationMethod.h  AtlasRegistrationMethod.txx  ChainedAffineTransform3D.cxx  SimpleGreedyFluidRegistration.txx
Slicer4CommandLine/: ABC.cxx  ABC.xml  AtlasMRBRegistrationMethod.h  AtlasMRBRegistrationMethod.txx  CMakeLists.txt
StandAloneCLI/: CMakeLists.txt  main_cli.cxx
StandAloneGUI/: GUI.cxx  GUI.fl
